setup ejs file for create and render it

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <div class="site-title">
-      <a href="/"><h1>Blog Ninja</h1></a>
+      <a href="/"><h1>Simple blog</h1></a>
       <p>Simple site</p>
     </div>
     <ul>
@@ -18,8 +18,8 @@
       <li><a href="/blogs/create">New Blog</a></li>
     </ul>
   </nav>
-  <div class="blog-content">
-    <h2>All Blogs</h2>
+  <div class="not-found content">
+    Oops, page not found :) 
   </div>
 </body>
 </html>
