--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my blog | <%= title %></title>
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
-  <nav>
-    <div class="site-title">
-      <a href="/"><h1>Simple Blog</h1></a>
-      <p>simple site</p>
-    </div>
-    <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
-    </ul>
-  </nav>
+  
+  <%- include('./partials/nav.ejs') %>
+
   <div class="create-blog content">
     <form>
       <label for="title">Blog title:</label>
@@ -29,5 +16,6 @@
       <button>Submit</button>
     </form>
   </div>
+  <%- include('./partials/footer.ejs') %>
 </body>
 </html>
