--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
   
   <%- include('./partials/nav.ejs') %>
 
-  <div class="blog-content">
+  <div class="blog-content content">
     <h2>All Blogs</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lorem mollis, tincidunt eros sed, finibus orci. Ut placerat nec odio vel auctor.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lorem mollis, tincidunt eros sed, finibus orci. Ut placerat nec odio vel auctor.</p>
