--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
-    <div class="site-title">
-      <a href="/"><h1>Blog Ninja</h1></a>
+    <div class="site-title content">
+      <a href="/"><h1>Simple Blog</h1></a>
       <p>Simple site</p>
     </div>
     <ul>
