--- a/views/create.ejs
+++ b/views/create.ejs
@@ -9,9 +9,9 @@
     <form>
       <label for="title">Blog title:</label>
       <input type="text" id="'title" required>
-      <label for="snippet">Blog snippet</label>
+      <label for="snippet">Blog snippet:</label>
       <input type="text" id="snippet">
-      <label for="body">Blog body</label>
+      <label for="body">Blog body:</label>
       <textarea id="body" required></textarea>
       <button>Submit</button>
     </form>
