--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
   <%- include('./partials/nav.ejs') %>
 
-  <div class="blog-content">
+  <div class="blog-content content">
     <h2>All Blogs</h2>
     <%if(blogs.length > 0){%>
       <%blogs.forEach(blog=>{%>
